Version 2.02.89 - 
==================================
  Drop pool memory allocated within lv_has_target_type().
  Reduce stack allocation of some PATH_MAX sized char buffers.
  Unlock memory before writing metadata.
  Add query before removing snapshots when inactive snapshot origin is removed.
  Allow changing availability state of snapshots.
  Skip non-virtual snapshots for availability change for lvchange with vg name.
  Adjusted mirror region size only for mirrors and raids.
  Reorder prompt conditions for removal of active volumes.
  Avoid 'mda inconsistency' by properly registering UNLABELLED_PV flag (2.02.86).
  Fix --enable-static_link unless using --enable-dmeventd / --enable-udev_sync.
  Move gentoo MAKEDEV to /sbin in lvm2create_initrd.
  Add filter to avoid scan of device if it is part of active multipath.
  Add missing default $LVM_VG_NAME usage for snapshots.
  Fix extent_count overflow with lvextend.
  Add missing lvrename mirrored log recursion in for_each_sub_lv.
  Improve lv_extend stack reporting.
  Increase virtual segment size instead of creating multiple segment list.
  Add last_seg(lv) internal function.
  Support empty string for log/prefix.
  Fix regression that allowed mirrored logs for cluster mirrors.
  Don't print char type[8] as a plain string in pvck PV type.
  Use vg memory pool implicitely for vg read.
  Always use vg memory pool for allocated lv segment.
  Remove extra 4kB buffer allocated on stack in print_log().
  Make move_lv_segment non-static function and use dm_list function.
  Pass exclusive LV locks to all nodes in the cluster.
  Improve lvcreate man documentation of the chunksize option.
  Improve man page style for lvcreate, lvs.
  Avoid recursive calls to dmeventd in its LVM plugins.
  Log dev name now returned to kernel for registering during cmirror CTR.
  Fix lv_info open_count test for disabled verify_udev_operations (2.02.86).
  Simplify code for lvm worker thread in clvmd.                     